# rag_try

./: .env.example  .gitignore  README.md
.claude/: settings.local.json
backend/: debug_logger.py  env_loader.py  ingest.py  main.py  pyproject.toml  rag.py  session_store.py
backend/docs/: README.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatContainer.jsx  ChatInput.jsx  MessageBubble.jsx  MessageList.jsx  ProgressPanel.jsx
